<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.activities.menu.MainActivity">

    <include layout="@layout/header_app" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/dimen10dp">
        <ImageView
            android:layout_width="@dimen/dimen200dp"
            android:layout_height="@dimen/dimen200dp"
            android:src="@drawable/biologi"/>
        <Button
            android:id="@+id/btn_kmsindo"
            android:layout_width="@dimen/dimen250dp"
            android:layout_marginTop="@dimen/dimen16"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button"
            android:textColor="@color/white"
            android:text="@string/kamus_biologi_indonesia" />
        <Button
            android:id="@+id/btn_kmslatin"
            android:layout_width="@dimen/dimen250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen6"
            android:background="@drawable/bg_button"
            android:textColor="@color/white"
            android:text="@string/kamus_biologi_latin" />
        <Button
            android:id="@+id/btn_exit"
            android:layout_marginTop="@dimen/dimen6"
            android:layout_width="@dimen/dimen250dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button"
            android:textColor="@color/white"
            android:text="@string/exit" />
    </LinearLayout>
</LinearLayout>